 . [NEW] Actions: Added block actions via PLBlocks: CCCallBlock and CCCallBlockN (issue #699)
 . [NEW] MenuItem: MenuItems supports blocks via PLBlocks (issue #699)
 . [NEW] Texture2D: added support for NPOT textures where available (issue #818)
 . [NEW] Templates: file templates for CCLayer, CCNode, CCSprite (issue #XXX)
 . [NEW] ProfilingTimer: new class to test performance (issue #XXX)
 . [FIX] Templates: Improved logic in template installer (issue #XXX)
 . [FIX] SpriteFrameCache: logs warning if frame is not found
 
version 0.99.1 - 19-Mar-2010
 . [FIX] Menu: If menu is not visible it doesn't receive touches (issue #88)
 . [FIX] Menu: MenuItemLabel restores the scale property (issue #500)
 . [FIX] SpriteFrameCache: set singleton to nil when it is purged (issue #814)
 . [FIX] Templates: thumb-compilation turned off at project settings (already off in target settings) (issue #772)
 . [FIX] Texture2D allocs the right texturememory when using the non-premultiplied alg.(issue #813)
 . [FIX] Texture2D supports A8 textures (issue #816)
 . [3RD] Libpng: updated to v1.2.43 (libpng is only used by a cocos2d test)

version 0.99.1-rc - 12-Mar-2010
 . [NEW] Actions: new added actions: CCProgressTo, CCProgressFromTo (issue #783)
 . [NEW] CGPointExtensions: new add functions:  CGPointExtension like: clampf, ccpClamp, ccpFromSize,
			ccpCompOp, ccpLerp, ccpFuzzyEqual, ccpCompMult, ccpAngleSigned, ccpAngle,
			ccpRotateByAngle, ccpLineIntersect (issue #783)
 . [NEW] Macros: added CCLOGINFO() and CCLOGERROR(). CCLOGINFO() disabled by default (issue #799)
 . [NEW] SpriteFrameCache: added support for Zwoptex Desktop version (issue #812)
 . [NEW] TMX: if layer contains cc_vertezx=automatic, tiles will use vertexZ and GL_ALPHA_TEST (issue #780)
 . [NEW] TMX: TMXLayer supports Tiled offset property (issue #616)
 . [NEW] TMX: Added support for .tsx tilesets (issue #619)
 . [NEW] Transition: new added transitions: CCRadialCCWTransition, CCRadialCWTransition (issue #783)