@@ -352,23 +352,23 @@ typedef struct _ccBezierConfig {
 @property (readwrite,nonatomic,retain) CCAnimation * animation;
 
 /** creates the action with an Animation and will restore the original frame when the animation is over */
-+(id) actionWithAnimation:(id<CCAnimationProtocol>) a;
++(id) actionWithAnimation:(CCAnimation*) a;
 /** initializes the action with an Animation and will restore the original frame when the animtion is over */
--(id) initWithAnimation:(id<CCAnimationProtocol>) a;
+-(id) initWithAnimation:(CCAnimation*) a;
 /** creates the action with an Animation */
-+(id) actionWithAnimation:(id<CCAnimationProtocol>) a restoreOriginalFrame:(BOOL)b;
++(id) actionWithAnimation:(CCAnimation*) a restoreOriginalFrame:(BOOL)b;
 /** initializes the action with an Animation */
--(id) initWithAnimation:(id<CCAnimationProtocol>) a restoreOriginalFrame:(BOOL)b;
+-(id) initWithAnimation:(CCAnimation*) a restoreOriginalFrame:(BOOL)b;
 /** creates an action with a duration, animation and depending of the restoreOriginalFrame, it will restore the original frame or not.
  The 'delay' parameter of the animation will be overrided by the duration parameter.
  @since v0.99.0
  */
-+(id) actionWithDuration:(ccTime)duration animation:(id<CCAnimationProtocol>)animation restoreOriginalFrame:(BOOL)b;
++(id) actionWithDuration:(ccTime)duration animation:(CCAnimation*)animation restoreOriginalFrame:(BOOL)b;
 /** initializes an action with a duration, animation and depending of the restoreOriginalFrame, it will restore the original frame or not.
  The 'delay' parameter of the animation will be overrided by the duration parameter.
  @since v0.99.0
  */
--(id) initWithDuration:(ccTime)duration animation:(id<CCAnimationProtocol>)animation restoreOriginalFrame:(BOOL)b;
+-(id) initWithDuration:(ccTime)duration animation:(CCAnimation*)animation restoreOriginalFrame:(BOOL)b;
 @end
 
 
