@@ -97,40 +97,4 @@
 -(void) setCString:(char*)label;
 @end
 
-#pragma mark -
-#pragma mark CCAnimationProtocol
-
-/// Objects that supports the Animation protocol
-/// @since v0.7.1
-@protocol CCAnimationProtocol <NSObject>
-/** readonly array with the frames. */
--(NSArray*) frames;
-/** set a array of frames */
--(void) setFrames:(NSArray*)array;
-/** delay of between frames in seconds. */
--(float) delay;
-/** name of the animation. */
--(NSString*) name;
-@end
-
-#pragma mark -
-#pragma mark CCFrameProtocol
-
-/// Nodes supports frames protocol
-/// @since v0.7.1
-@class CCSpriteFrame;
-@protocol CCFrameProtocol <NSObject>
-/** sets a new display frame to the node. */
--(void) setDisplayFrame:(CCSpriteFrame*)newFrame;
-/** changes the display frame based on an animation and an index. */
--(void) setDisplayFrame: (NSString*) animationName index:(int) frameIndex;
-/** returns the current displayed frame. */
--(BOOL) isFrameDisplayed:(CCSpriteFrame*)frame;
-/** returns the current displayed frame. */
--(CCSpriteFrame*) displayedFrame;
-/** returns an Animation given it's name. */
--(id<CCAnimationProtocol>)animationByName: (NSString*) animationName;
-/** adds an Animation to the Sprite. */
--(void) addAnimation: (id<CCAnimationProtocol>) animation;
-@end
 
